// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetCompositionComponent should correctly render fields: initial-fields 1`] = `
<div
  id="root0"
>
  <cca-wizard-step
    class="ng-untouched ng-pristine ng-invalid"
    data-testid="add-target-composition-form"
    heading="Add target composition"
  >
    <form
      class="ng-untouched ng-pristine ng-invalid"
      novalidate=""
    >
      
      <cca-page-heading>
        <span
          class="govuk-caption-l"
        >
          TP6 (2024)
        </span>
        
        <h1
          class="govuk-heading-l"
        >
          Add target composition
        </h1>
      </cca-page-heading>
      <div
        class="govuk-body govuk-!-margin-top-9 govuk-!-width-two-thirds"
      >
        <section>
          <h2
            class="govuk-heading-m"
          >
            Target calculator file
          </h2>
          <cca-file-input
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="calculatorFile"
            hint="Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets."
            label="Upload the completed target calculator file."
          >
            <div
              class="moj-multi-file-upload moj-multi-file-upload--enhanced"
            >
              <label
                class="govuk-label"
                for="calculatorFile"
                id="l.calculatorFile"
              >
                Upload the completed target calculator file.
              </label>
              
              
              <span
                class="govuk-hint govuk-!-display-block"
                id="calculatorFile-hint"
              >
                Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets.
              </span>
              
              
              <input
                accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                class="govuk-file-upload"
                disabled=""
                id="calculatorFile"
                name="calculatorFile"
                type="file"
              />
              <cca-file-upload-list>
                <div
                  class="moj-multi-file__uploaded-files moj-hidden"
                >
                  
                  <dl
                    class="govuk-summary-list moj-multi-file-upload__list"
                  >
                    
                  </dl>
                  
                  
                  
                  
                  
                  
                </div>
                
              </cca-file-upload-list>
            </div>
          </cca-file-input>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Energy or carbon units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationMeasurementType"
            label="Used by the sector"
          >
            <label
              class="govuk-label"
              for="sectorAssociationMeasurementType"
              id="l.sectorAssociationMeasurementType"
            >
              Used by the sector
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               Energy (kWh) 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="measurementType"
            govuk-select=""
            label="Used by the target unit"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="measurementType"
              id="l.measurementType"
            >
               Used by the target unit

            </label>
            
            <select
              class="govuk-select govuk-!-width-two-thirds ng-untouched ng-pristine ng-invalid"
              govukformerror=""
              id="measurementType"
              name="measurementType"
            >
              <option
                value="0: ENERGY_KWH"
              >
                 Energy (kWh) 
              </option>
              <option
                value="1: ENERGY_MWH"
              >
                 Energy (MWh) 
              </option>
              <option
                value="2: ENERGY_GJ"
              >
                 Energy (GJ) 
              </option>
              <option
                value="3: CARBON_KG"
              >
                 Carbon (kg) 
              </option>
              <option
                value="4: CARBON_TONNE"
              >
                 Carbon (tonne) 
              </option>
              
            </select>
          </div>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Agreement composition
          </h2>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="agreementCompositionType"
            govuk-radio=""
            legend="Select target type"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="agreementCompositionType"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.agreementCompositionType"
                >
                  Select target type
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option0"
                      name="agreementCompositionType"
                      type="radio"
                      value="ABSOLUTE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option0"
                    >
                      Absolute
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option1"
                      name="agreementCompositionType"
                      type="radio"
                      value="RELATIVE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option1"
                    >
                      Relative
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option2"
                      name="agreementCompositionType"
                      type="radio"
                      value="NOVEM"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option2"
                    >
                      Novem
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          <govuk-details
            class="govuk-body"
            summary="More information about target types"
          >
            <details
              class="govuk-details"
            >
              <summary
                class="govuk-details__summary"
              >
                <span
                  class="govuk-details__summary-text"
                >
                  More information about target types
                </span>
              </summary>
              <div
                class="govuk-details__text"
              >
                <p>
                  Types of targets:
                </p>
                <p>
                   Numerical improvement targets can be expressed in terms of energy or carbon and can be absolute, relative or Novem. 
                </p>
                <p>
                   An absolute target is a target to reduce the total energy consumed within the target facility for each target period. For example, 10,000,000 kWh. 
                </p>
                <p>
                   A relative target is a target to reduce the energy used to produce each unit of throughput in the target facility. For example, 10,000 kWh/tonne product. 
                </p>
                <p>
                   A Novem target is expressed as the ratio of the target energy consumption to the reference energy, where the reference energy is the energy that would have been consumed in the base year for the same level of throughput and product mix as in the target period. 
                </p>
                <p>
                   Novem targets can be used when a target unit produces two or more products which have very different energy intensities of production or whose throughput is measured in very different units (for example, m2 and litres). This can avoid distortions created by a changing mix of throughput between the baseline period and the target period. 
                </p>
              </div>
            </details>
          </govuk-details>
        </section>
        
      </div>
      <button
        ccapendingbutton=""
        class="govuk-button"
        govukbutton=""
        type="submit"
      >
        Continue
      </button>
      
      
    </form>
  </cca-wizard-step>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      govuklink=""
      href="/undefined"
    >
       Return to: Apply for underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;

exports[`TargetCompositionComponent should not render measure fields isMeasured is false: is Measured false 1`] = `
<div
  id="root3"
>
  <cca-wizard-step
    class="ng-invalid ng-dirty ng-touched"
    data-testid="add-target-composition-form"
    heading="Add target composition"
  >
    <form
      class="ng-untouched ng-pristine ng-invalid"
      novalidate=""
    >
      
      <cca-page-heading>
        <span
          class="govuk-caption-l"
        >
          TP6 (2024)
        </span>
        
        <h1
          class="govuk-heading-l"
        >
          Add target composition
        </h1>
      </cca-page-heading>
      <div
        class="govuk-body govuk-!-margin-top-9 govuk-!-width-two-thirds"
      >
        <section>
          <h2
            class="govuk-heading-m"
          >
            Target calculator file
          </h2>
          <cca-file-input
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="calculatorFile"
            hint="Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets."
            label="Upload the completed target calculator file."
          >
            <div
              class="moj-multi-file-upload moj-multi-file-upload--enhanced"
            >
              <label
                class="govuk-label"
                for="calculatorFile"
                id="l.calculatorFile"
              >
                Upload the completed target calculator file.
              </label>
              
              
              <span
                class="govuk-hint govuk-!-display-block"
                id="calculatorFile-hint"
              >
                Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets.
              </span>
              
              
              <input
                accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                class="govuk-file-upload"
                disabled=""
                id="calculatorFile"
                name="calculatorFile"
                type="file"
              />
              <cca-file-upload-list>
                <div
                  class="moj-multi-file__uploaded-files moj-hidden"
                >
                  
                  <dl
                    class="govuk-summary-list moj-multi-file-upload__list"
                  >
                    
                  </dl>
                  
                  
                  
                  
                  
                  
                </div>
                
              </cca-file-upload-list>
            </div>
          </cca-file-input>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Energy or carbon units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationMeasurementType"
            label="Used by the sector"
          >
            <label
              class="govuk-label"
              for="sectorAssociationMeasurementType"
              id="l.sectorAssociationMeasurementType"
            >
              Used by the sector
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               Energy (kWh) 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="measurementType"
            govuk-select=""
            label="Used by the target unit"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="measurementType"
              id="l.measurementType"
            >
               Used by the target unit

            </label>
            
            <select
              class="govuk-select govuk-!-width-two-thirds ng-untouched ng-pristine ng-invalid"
              govukformerror=""
              id="measurementType"
              name="measurementType"
            >
              <option
                value="0: ENERGY_KWH"
              >
                 Energy (kWh) 
              </option>
              <option
                value="1: ENERGY_MWH"
              >
                 Energy (MWh) 
              </option>
              <option
                value="2: ENERGY_GJ"
              >
                 Energy (GJ) 
              </option>
              <option
                value="3: CARBON_KG"
              >
                 Carbon (kg) 
              </option>
              <option
                value="4: CARBON_TONNE"
              >
                 Carbon (tonne) 
              </option>
              
            </select>
          </div>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Agreement composition
          </h2>
          <div
            class="govuk-!-display-block govuk-form-group ng-dirty ng-valid ng-touched"
            formcontrolname="agreementCompositionType"
            govuk-radio=""
            legend="Select target type"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="agreementCompositionType"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.agreementCompositionType"
                >
                  Select target type
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option0"
                      name="agreementCompositionType"
                      type="radio"
                      value="ABSOLUTE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option0"
                    >
                      Absolute
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option1"
                      name="agreementCompositionType"
                      type="radio"
                      value="RELATIVE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option1"
                    >
                      Relative
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option2"
                      name="agreementCompositionType"
                      type="radio"
                      value="NOVEM"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option2"
                    >
                      Novem
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          <govuk-details
            class="govuk-body"
            summary="More information about target types"
          >
            <details
              class="govuk-details"
            >
              <summary
                class="govuk-details__summary"
              >
                <span
                  class="govuk-details__summary-text"
                >
                  More information about target types
                </span>
              </summary>
              <div
                class="govuk-details__text"
              >
                <p>
                  Types of targets:
                </p>
                <p>
                   Numerical improvement targets can be expressed in terms of energy or carbon and can be absolute, relative or Novem. 
                </p>
                <p>
                   An absolute target is a target to reduce the total energy consumed within the target facility for each target period. For example, 10,000,000 kWh. 
                </p>
                <p>
                   A relative target is a target to reduce the energy used to produce each unit of throughput in the target facility. For example, 10,000 kWh/tonne product. 
                </p>
                <p>
                   A Novem target is expressed as the ratio of the target energy consumption to the reference energy, where the reference energy is the energy that would have been consumed in the base year for the same level of throughput and product mix as in the target period. 
                </p>
                <p>
                   Novem targets can be used when a target unit produces two or more products which have very different energy intensities of production or whose throughput is measured in very different units (for example, m2 and litres). This can avoid distortions created by a changing mix of throughput between the baseline period and the target period. 
                </p>
              </div>
            </details>
          </govuk-details>
        </section>
        <section>
          <h2>
            Throughput units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationThroughputUnit"
            label="The umbrella agreement uses a throughput unit of"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="sectorAssociationThroughputUnit"
              id="l.sectorAssociationThroughputUnit"
            >
              The umbrella agreement uses a throughput unit of
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               tonne 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-dirty ng-valid"
            formcontrolname="isTargetUnitThroughputMeasured"
            govuk-radio=""
            legend="Is the target unit’s throughput measured in units that differ from the umbrella agreement?"
            widthclass="govuk-!-width-two-thirds"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="isTargetUnitThroughputMeasured"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.isTargetUnitThroughputMeasured"
                >
                  Is the target unit’s throughput measured in units that differ from the umbrella agreement?
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios govuk-radios--inline"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="isTargetUnitThroughputMeasured-option0"
                      name="isTargetUnitThroughputMeasured"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="isTargetUnitThroughputMeasured-option0"
                    >
                      Yes
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="isTargetUnitThroughputMeasured-option1"
                      name="isTargetUnitThroughputMeasured"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="isTargetUnitThroughputMeasured-option1"
                    >
                      No
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          
          
          
        </section>
        
      </div>
      <button
        ccapendingbutton=""
        class="govuk-button"
        govukbutton=""
        type="submit"
      >
        Continue
      </button>
      
      
    </form>
  </cca-wizard-step>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      govuklink=""
      href="/undefined"
    >
       Return to: Apply for underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;

exports[`TargetCompositionComponent should not render throughput if NOVEM is selected: novem-selected 1`] = `
<div
  id="root1"
>
  <cca-wizard-step
    class="ng-untouched ng-invalid ng-dirty"
    data-testid="add-target-composition-form"
    heading="Add target composition"
  >
    <form
      class="ng-untouched ng-pristine ng-invalid"
      novalidate=""
    >
      
      <cca-page-heading>
        <span
          class="govuk-caption-l"
        >
          TP6 (2024)
        </span>
        
        <h1
          class="govuk-heading-l"
        >
          Add target composition
        </h1>
      </cca-page-heading>
      <div
        class="govuk-body govuk-!-margin-top-9 govuk-!-width-two-thirds"
      >
        <section>
          <h2
            class="govuk-heading-m"
          >
            Target calculator file
          </h2>
          <cca-file-input
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="calculatorFile"
            hint="Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets."
            label="Upload the completed target calculator file."
          >
            <div
              class="moj-multi-file-upload moj-multi-file-upload--enhanced"
            >
              <label
                class="govuk-label"
                for="calculatorFile"
                id="l.calculatorFile"
              >
                Upload the completed target calculator file.
              </label>
              
              
              <span
                class="govuk-hint govuk-!-display-block"
                id="calculatorFile-hint"
              >
                Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets.
              </span>
              
              
              <input
                accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                class="govuk-file-upload"
                disabled=""
                id="calculatorFile"
                name="calculatorFile"
                type="file"
              />
              <cca-file-upload-list>
                <div
                  class="moj-multi-file__uploaded-files moj-hidden"
                >
                  
                  <dl
                    class="govuk-summary-list moj-multi-file-upload__list"
                  >
                    
                  </dl>
                  
                  
                  
                  
                  
                  
                </div>
                
              </cca-file-upload-list>
            </div>
          </cca-file-input>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Energy or carbon units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationMeasurementType"
            label="Used by the sector"
          >
            <label
              class="govuk-label"
              for="sectorAssociationMeasurementType"
              id="l.sectorAssociationMeasurementType"
            >
              Used by the sector
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               Energy (kWh) 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="measurementType"
            govuk-select=""
            label="Used by the target unit"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="measurementType"
              id="l.measurementType"
            >
               Used by the target unit

            </label>
            
            <select
              class="govuk-select govuk-!-width-two-thirds ng-untouched ng-pristine ng-invalid"
              govukformerror=""
              id="measurementType"
              name="measurementType"
            >
              <option
                value="0: ENERGY_KWH"
              >
                 Energy (kWh) 
              </option>
              <option
                value="1: ENERGY_MWH"
              >
                 Energy (MWh) 
              </option>
              <option
                value="2: ENERGY_GJ"
              >
                 Energy (GJ) 
              </option>
              <option
                value="3: CARBON_KG"
              >
                 Carbon (kg) 
              </option>
              <option
                value="4: CARBON_TONNE"
              >
                 Carbon (tonne) 
              </option>
              
            </select>
          </div>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Agreement composition
          </h2>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-dirty ng-valid"
            formcontrolname="agreementCompositionType"
            govuk-radio=""
            legend="Select target type"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="agreementCompositionType"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.agreementCompositionType"
                >
                  Select target type
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option0"
                      name="agreementCompositionType"
                      type="radio"
                      value="ABSOLUTE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option0"
                    >
                      Absolute
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option1"
                      name="agreementCompositionType"
                      type="radio"
                      value="RELATIVE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option1"
                    >
                      Relative
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option2"
                      name="agreementCompositionType"
                      type="radio"
                      value="NOVEM"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option2"
                    >
                      Novem
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          <govuk-details
            class="govuk-body"
            summary="More information about target types"
          >
            <details
              class="govuk-details"
            >
              <summary
                class="govuk-details__summary"
              >
                <span
                  class="govuk-details__summary-text"
                >
                  More information about target types
                </span>
              </summary>
              <div
                class="govuk-details__text"
              >
                <p>
                  Types of targets:
                </p>
                <p>
                   Numerical improvement targets can be expressed in terms of energy or carbon and can be absolute, relative or Novem. 
                </p>
                <p>
                   An absolute target is a target to reduce the total energy consumed within the target facility for each target period. For example, 10,000,000 kWh. 
                </p>
                <p>
                   A relative target is a target to reduce the energy used to produce each unit of throughput in the target facility. For example, 10,000 kWh/tonne product. 
                </p>
                <p>
                   A Novem target is expressed as the ratio of the target energy consumption to the reference energy, where the reference energy is the energy that would have been consumed in the base year for the same level of throughput and product mix as in the target period. 
                </p>
                <p>
                   Novem targets can be used when a target unit produces two or more products which have very different energy intensities of production or whose throughput is measured in very different units (for example, m2 and litres). This can avoid distortions created by a changing mix of throughput between the baseline period and the target period. 
                </p>
              </div>
            </details>
          </govuk-details>
        </section>
        
      </div>
      <button
        ccapendingbutton=""
        class="govuk-button"
        govukbutton=""
        type="submit"
      >
        Continue
      </button>
      
      
    </form>
  </cca-wizard-step>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      govuklink=""
      href="/undefined"
    >
       Return to: Apply for underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;

exports[`TargetCompositionComponent should render measure fields isMeasured is true: is Measured true 1`] = `
<div
  id="root4"
>
  <cca-wizard-step
    class="ng-invalid ng-dirty ng-touched"
    data-testid="add-target-composition-form"
    heading="Add target composition"
  >
    <form
      class="ng-untouched ng-pristine ng-invalid"
      novalidate=""
    >
      
      <cca-page-heading>
        <span
          class="govuk-caption-l"
        >
          TP6 (2024)
        </span>
        
        <h1
          class="govuk-heading-l"
        >
          Add target composition
        </h1>
      </cca-page-heading>
      <div
        class="govuk-body govuk-!-margin-top-9 govuk-!-width-two-thirds"
      >
        <section>
          <h2
            class="govuk-heading-m"
          >
            Target calculator file
          </h2>
          <cca-file-input
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="calculatorFile"
            hint="Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets."
            label="Upload the completed target calculator file."
          >
            <div
              class="moj-multi-file-upload moj-multi-file-upload--enhanced"
            >
              <label
                class="govuk-label"
                for="calculatorFile"
                id="l.calculatorFile"
              >
                Upload the completed target calculator file.
              </label>
              
              
              <span
                class="govuk-hint govuk-!-display-block"
                id="calculatorFile-hint"
              >
                Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets.
              </span>
              
              
              <input
                accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                class="govuk-file-upload"
                disabled=""
                id="calculatorFile"
                name="calculatorFile"
                type="file"
              />
              <cca-file-upload-list>
                <div
                  class="moj-multi-file__uploaded-files moj-hidden"
                >
                  
                  <dl
                    class="govuk-summary-list moj-multi-file-upload__list"
                  >
                    
                  </dl>
                  
                  
                  
                  
                  
                  
                </div>
                
              </cca-file-upload-list>
            </div>
          </cca-file-input>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Energy or carbon units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationMeasurementType"
            label="Used by the sector"
          >
            <label
              class="govuk-label"
              for="sectorAssociationMeasurementType"
              id="l.sectorAssociationMeasurementType"
            >
              Used by the sector
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               Energy (kWh) 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="measurementType"
            govuk-select=""
            label="Used by the target unit"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="measurementType"
              id="l.measurementType"
            >
               Used by the target unit

            </label>
            
            <select
              class="govuk-select govuk-!-width-two-thirds ng-untouched ng-pristine ng-invalid"
              govukformerror=""
              id="measurementType"
              name="measurementType"
            >
              <option
                value="0: ENERGY_KWH"
              >
                 Energy (kWh) 
              </option>
              <option
                value="1: ENERGY_MWH"
              >
                 Energy (MWh) 
              </option>
              <option
                value="2: ENERGY_GJ"
              >
                 Energy (GJ) 
              </option>
              <option
                value="3: CARBON_KG"
              >
                 Carbon (kg) 
              </option>
              <option
                value="4: CARBON_TONNE"
              >
                 Carbon (tonne) 
              </option>
              
            </select>
          </div>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Agreement composition
          </h2>
          <div
            class="govuk-!-display-block govuk-form-group ng-dirty ng-valid ng-touched"
            formcontrolname="agreementCompositionType"
            govuk-radio=""
            legend="Select target type"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="agreementCompositionType"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.agreementCompositionType"
                >
                  Select target type
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option0"
                      name="agreementCompositionType"
                      type="radio"
                      value="ABSOLUTE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option0"
                    >
                      Absolute
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option1"
                      name="agreementCompositionType"
                      type="radio"
                      value="RELATIVE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option1"
                    >
                      Relative
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option2"
                      name="agreementCompositionType"
                      type="radio"
                      value="NOVEM"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option2"
                    >
                      Novem
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          <govuk-details
            class="govuk-body"
            summary="More information about target types"
          >
            <details
              class="govuk-details"
            >
              <summary
                class="govuk-details__summary"
              >
                <span
                  class="govuk-details__summary-text"
                >
                  More information about target types
                </span>
              </summary>
              <div
                class="govuk-details__text"
              >
                <p>
                  Types of targets:
                </p>
                <p>
                   Numerical improvement targets can be expressed in terms of energy or carbon and can be absolute, relative or Novem. 
                </p>
                <p>
                   An absolute target is a target to reduce the total energy consumed within the target facility for each target period. For example, 10,000,000 kWh. 
                </p>
                <p>
                   A relative target is a target to reduce the energy used to produce each unit of throughput in the target facility. For example, 10,000 kWh/tonne product. 
                </p>
                <p>
                   A Novem target is expressed as the ratio of the target energy consumption to the reference energy, where the reference energy is the energy that would have been consumed in the base year for the same level of throughput and product mix as in the target period. 
                </p>
                <p>
                   Novem targets can be used when a target unit produces two or more products which have very different energy intensities of production or whose throughput is measured in very different units (for example, m2 and litres). This can avoid distortions created by a changing mix of throughput between the baseline period and the target period. 
                </p>
              </div>
            </details>
          </govuk-details>
        </section>
        <section>
          <h2>
            Throughput units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationThroughputUnit"
            label="The umbrella agreement uses a throughput unit of"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="sectorAssociationThroughputUnit"
              id="l.sectorAssociationThroughputUnit"
            >
              The umbrella agreement uses a throughput unit of
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               tonne 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-dirty ng-valid"
            formcontrolname="isTargetUnitThroughputMeasured"
            govuk-radio=""
            legend="Is the target unit’s throughput measured in units that differ from the umbrella agreement?"
            widthclass="govuk-!-width-two-thirds"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="isTargetUnitThroughputMeasured"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.isTargetUnitThroughputMeasured"
                >
                  Is the target unit’s throughput measured in units that differ from the umbrella agreement?
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios govuk-radios--inline"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="isTargetUnitThroughputMeasured-option0"
                      name="isTargetUnitThroughputMeasured"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="isTargetUnitThroughputMeasured-option0"
                    >
                      Yes
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="isTargetUnitThroughputMeasured-option1"
                      name="isTargetUnitThroughputMeasured"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="isTargetUnitThroughputMeasured-option1"
                    >
                      No
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="throughputUnit"
            govuk-text-input=""
            label="Target unit throughput has a unit of"
            widthclass="govuk-!-width-one-third"
          >
            <label
              class="govuk-label"
              for="throughputUnit"
              id="l.throughputUnit"
            >
              Target unit throughput has a unit of
              
              
              
            </label>
            
            
            <input
              autocomplete="on"
              class="govuk-input govuk-!-width-one-third"
              id="throughputUnit"
              name="throughputUnit"
              type="text"
            />
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-valid"
            formcontrolname="conversionFactor"
            govuk-text-input=""
            hint="Enter the factor you use to convert from the target unit throughput unit to the sector throughput unit"
            inputtype="number"
            label="Conversion factor"
            widthclass="govuk-!-width-one-third"
          >
            <label
              class="govuk-label"
              for="conversionFactor"
              id="l.conversionFactor"
            >
              Conversion factor
              
              
              
            </label>
            <div
              class="govuk-hint"
              id="conversionFactor-hint"
            >
               Enter the factor you use to convert from the target unit throughput unit to the sector throughput unit

            </div>
            
            
            <input
              autocomplete="on"
              class="govuk-input govuk-!-width-one-third"
              id="conversionFactor"
              name="conversionFactor"
              type="text"
            />
            
            
          </div>
          <div>
            <cca-multiple-file-input
              class="ng-untouched ng-pristine ng-invalid"
              formcontrolname="conversionEvidences"
              hint="Upload evidence for the conversion factor you have provided above"
              label="Upload evidence"
              widthclass="govuk-!-width-two-thirds"
            >
              <div
                class="moj-multi-file-upload moj-multi-file-upload--enhanced"
              >
                <div
                  class="moj-multi-file-upload__upload"
                >
                  <div
                    class="govuk-form-group"
                  >
                    <label
                      class="govuk-label govuk-label--null"
                      for="conversionEvidences"
                      id="l.conversionEvidences"
                    >
                      Upload evidence
                    </label>
                    <span
                      class="govuk-hint"
                      id="conversionEvidences-hint"
                    >
                      Upload evidence for the conversion factor you have provided above
                    </span>
                    
                    
                    
                    <div
                      class="moj-multi-file-upload__dropzone govuk-!-margin-top-4"
                    >
                      <input
                        accept="*/*"
                        aria-labelledby="l.conversionEvidences ld.conversionEvidences"
                        class="govuk-file-upload moj-multi-file-upload__input"
                        id="conversionEvidences"
                        multiple=""
                        name="conversionEvidences"
                        type="file"
                      />
                      <p
                        class="govuk-body"
                      >
                        Drag and drop files here or
                      </p>
                      <label
                        class="govuk-button govuk-button--secondary"
                        for="conversionEvidences"
                        id="ld.conversionEvidences"
                      >
                         Choose files 
                      </label>
                      <div
                        aria-live="polite"
                        class="govuk-visually-hidden"
                        role="status"
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <cca-file-upload-list>
                  <div
                    class="moj-multi-file__uploaded-files moj-hidden"
                  >
                    
                    <dl
                      class="govuk-summary-list moj-multi-file-upload__list"
                    >
                      
                    </dl>
                    
                    
                    
                    
                    
                    
                  </div>
                  
                </cca-file-upload-list>
              </div>
            </cca-multiple-file-input>
          </div>
          
          
          
        </section>
        
      </div>
      <button
        ccapendingbutton=""
        class="govuk-button"
        govukbutton=""
        type="submit"
      >
        Continue
      </button>
      
      
    </form>
  </cca-wizard-step>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      govuklink=""
      href="/undefined"
    >
       Return to: Apply for underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;

exports[`TargetCompositionComponent should render throughput if ABSOLUTE or RELATIVE is selected: agreementCompositionType selected 1`] = `
<div
  id="root2"
>
  <cca-wizard-step
    class="ng-untouched ng-invalid ng-dirty"
    data-testid="add-target-composition-form"
    heading="Add target composition"
  >
    <form
      class="ng-untouched ng-pristine ng-invalid"
      novalidate=""
    >
      
      <cca-page-heading>
        <span
          class="govuk-caption-l"
        >
          TP6 (2024)
        </span>
        
        <h1
          class="govuk-heading-l"
        >
          Add target composition
        </h1>
      </cca-page-heading>
      <div
        class="govuk-body govuk-!-margin-top-9 govuk-!-width-two-thirds"
      >
        <section>
          <h2
            class="govuk-heading-m"
          >
            Target calculator file
          </h2>
          <cca-file-input
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="calculatorFile"
            hint="Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets."
            label="Upload the completed target calculator file."
          >
            <div
              class="moj-multi-file-upload moj-multi-file-upload--enhanced"
            >
              <label
                class="govuk-label"
                for="calculatorFile"
                id="l.calculatorFile"
              >
                Upload the completed target calculator file.
              </label>
              
              
              <span
                class="govuk-hint govuk-!-display-block"
                id="calculatorFile-hint"
              >
                Provide the 12 months of baseline energy in the target unit for the eligible and target facility,
        split by fuel type, as well as the calculated targets.
              </span>
              
              
              <input
                accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                class="govuk-file-upload"
                disabled=""
                id="calculatorFile"
                name="calculatorFile"
                type="file"
              />
              <cca-file-upload-list>
                <div
                  class="moj-multi-file__uploaded-files moj-hidden"
                >
                  
                  <dl
                    class="govuk-summary-list moj-multi-file-upload__list"
                  >
                    
                  </dl>
                  
                  
                  
                  
                  
                  
                </div>
                
              </cca-file-upload-list>
            </div>
          </cca-file-input>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Energy or carbon units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationMeasurementType"
            label="Used by the sector"
          >
            <label
              class="govuk-label"
              for="sectorAssociationMeasurementType"
              id="l.sectorAssociationMeasurementType"
            >
              Used by the sector
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               Energy (kWh) 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="measurementType"
            govuk-select=""
            label="Used by the target unit"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="measurementType"
              id="l.measurementType"
            >
               Used by the target unit

            </label>
            
            <select
              class="govuk-select govuk-!-width-two-thirds ng-untouched ng-pristine ng-invalid"
              govukformerror=""
              id="measurementType"
              name="measurementType"
            >
              <option
                value="0: ENERGY_KWH"
              >
                 Energy (kWh) 
              </option>
              <option
                value="1: ENERGY_MWH"
              >
                 Energy (MWh) 
              </option>
              <option
                value="2: ENERGY_GJ"
              >
                 Energy (GJ) 
              </option>
              <option
                value="3: CARBON_KG"
              >
                 Carbon (kg) 
              </option>
              <option
                value="4: CARBON_TONNE"
              >
                 Carbon (tonne) 
              </option>
              
            </select>
          </div>
        </section>
        <section>
          <h2
            class="govuk-heading-m"
          >
            Agreement composition
          </h2>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-dirty ng-valid"
            formcontrolname="agreementCompositionType"
            govuk-radio=""
            legend="Select target type"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="agreementCompositionType"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.agreementCompositionType"
                >
                  Select target type
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option0"
                      name="agreementCompositionType"
                      type="radio"
                      value="ABSOLUTE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option0"
                    >
                      Absolute
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option1"
                      name="agreementCompositionType"
                      type="radio"
                      value="RELATIVE"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option1"
                    >
                      Relative
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="agreementCompositionType-option2"
                      name="agreementCompositionType"
                      type="radio"
                      value="NOVEM"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="agreementCompositionType-option2"
                    >
                      Novem
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          <govuk-details
            class="govuk-body"
            summary="More information about target types"
          >
            <details
              class="govuk-details"
            >
              <summary
                class="govuk-details__summary"
              >
                <span
                  class="govuk-details__summary-text"
                >
                  More information about target types
                </span>
              </summary>
              <div
                class="govuk-details__text"
              >
                <p>
                  Types of targets:
                </p>
                <p>
                   Numerical improvement targets can be expressed in terms of energy or carbon and can be absolute, relative or Novem. 
                </p>
                <p>
                   An absolute target is a target to reduce the total energy consumed within the target facility for each target period. For example, 10,000,000 kWh. 
                </p>
                <p>
                   A relative target is a target to reduce the energy used to produce each unit of throughput in the target facility. For example, 10,000 kWh/tonne product. 
                </p>
                <p>
                   A Novem target is expressed as the ratio of the target energy consumption to the reference energy, where the reference energy is the energy that would have been consumed in the base year for the same level of throughput and product mix as in the target period. 
                </p>
                <p>
                   Novem targets can be used when a target unit produces two or more products which have very different energy intensities of production or whose throughput is measured in very different units (for example, m2 and litres). This can avoid distortions created by a changing mix of throughput between the baseline period and the target period. 
                </p>
              </div>
            </details>
          </govuk-details>
        </section>
        <section>
          <h2>
            Throughput units
          </h2>
          <div
            cca-text-input=""
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine"
            formcontrolname="sectorAssociationThroughputUnit"
            label="The umbrella agreement uses a throughput unit of"
            widthclass="govuk-!-width-two-thirds"
          >
            <label
              class="govuk-label"
              for="sectorAssociationThroughputUnit"
              id="l.sectorAssociationThroughputUnit"
            >
              The umbrella agreement uses a throughput unit of
              
              
              
            </label>
            
            
            <p
              class="govuk-body"
            >
               tonne 
            </p>
            
            
            
            
          </div>
          <div
            class="govuk-!-display-block govuk-form-group ng-untouched ng-pristine ng-invalid"
            formcontrolname="isTargetUnitThroughputMeasured"
            govuk-radio=""
            legend="Is the target unit’s throughput measured in units that differ from the umbrella agreement?"
            widthclass="govuk-!-width-two-thirds"
          >
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                govukfieldset=""
                id="isTargetUnitThroughputMeasured"
              >
                <legend
                  class="govuk-fieldset__legend"
                  govuklegend=""
                  id="l.isTargetUnitThroughputMeasured"
                >
                  Is the target unit’s throughput measured in units that differ from the umbrella agreement?
                  
                  
                  
                </legend>
                
                
                <div
                  class="govuk-radios govuk-radios--inline"
                >
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="isTargetUnitThroughputMeasured-option0"
                      name="isTargetUnitThroughputMeasured"
                      type="radio"
                      value="true"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="isTargetUnitThroughputMeasured-option0"
                    >
                      Yes
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="isTargetUnitThroughputMeasured-option1"
                      name="isTargetUnitThroughputMeasured"
                      type="radio"
                      value="false"
                    />
                    <label
                      class="govuk-label govuk-radios__label"
                      for="isTargetUnitThroughputMeasured-option1"
                    >
                      No
                      
                      
                      
                    </label>
                    
                  </div>
                  
                  
                  
                  
                  
                </div>
              </fieldset>
            </div>
          </div>
          
          
          
        </section>
        
      </div>
      <button
        ccapendingbutton=""
        class="govuk-button"
        govukbutton=""
        type="submit"
      >
        Continue
      </button>
      
      
    </form>
  </cca-wizard-step>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      govuklink=""
      href="/undefined"
    >
       Return to: Apply for underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;
